Send page + Scrollbars + Fixes

--- a/src/app/settings/settings.component.scss
+++ b/src/app/settings/settings.component.scss
@@ -54,8 +54,7 @@ button:active {
 
 /* Particl inputs */
 input[type="text"] {
-  background-color: #FBFBFB;
+  background-color: #fff;
   border: 1px solid #EDEDED;
-  border-radius: 3px;
   padding: 4px;
 }
