--- a/src/assets/_config.scss
+++ b/src/assets/_config.scss
@@ -10,4 +10,4 @@ $text: #232728; // default text color
 $text-muted: #7E8790; // grey (for section titles, descriptions etc.)
 
 // bg/element colors
-$bg-shadow: #E9E9E9; // lines, box shadows etc.
+$bg-shadow: #dcdcdc; // lines, box shadows etc.
