--- a/src/assets/theme.scss
+++ b/src/assets/theme.scss
@@ -178,6 +178,35 @@ input[type="text"] {
 }
 
 /**
+ * Scrollbars
+ */
+ 
+/* pseudo elements
+::-webkit-scrollbar              {}
+::-webkit-scrollbar-button       {}
+::-webkit-scrollbar-track        {}
+::-webkit-scrollbar-track-piece  {}
+::-webkit-scrollbar-thumb        {}
+::-webkit-scrollbar-corner       {}
+::-webkit-resizer                {}
+*/
+ 
+::-webkit-scrollbar-track {
+  border-radius: 15px;
+  background-color: #e9e9e9;
+}
+
+::-webkit-scrollbar {
+  width: 6px;
+}
+
+::-webkit-scrollbar-thumb:vertical {
+  width: 6px;
+  border-radius: 15px;
+  background-color: $color;
+}
+
+/**
  * History List
  */
 
